--- a/module5/src/main/resources/edu.au.cpsc.launcher.style/launcher-app.fxml
+++ b/module5/src/main/resources/edu.au.cpsc.launcher.style/launcher-app.fxml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="edu.au.cpsc.launcher.LauncherController"
-            prefHeight="400.0" prefWidth="600.0">
+<!--only change sizing and padding if needed-->
 
+
+<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.au.cpsc.launcher.LauncherController">
+   <children>
+      <GridPane layoutX="6.0" layoutY="2.0" prefHeight="423.0" prefWidth="400.0" stylesheets="@main.css">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button id="airport-button" mnemonicParsing="false" prefHeight="195.0" prefWidth="195.0" text="Airports" />
+            <Button id="seat-reservation-button" mnemonicParsing="false" prefHeight="195.0" prefWidth="195.0" text="Seat Reservations" GridPane.columnIndex="1" />
+            <Button id="flight-schedule-button" mnemonicParsing="false" prefHeight="195.0" prefWidth="195.0" text="Flight Schedule" GridPane.rowIndex="1" />
+            <Button id="aircraft-button" mnemonicParsing="false" prefHeight="195.0" prefWidth="195.0" text="Aircraft" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
+   </children>
 </AnchorPane>
