fonts complete commit

--- a/module5/src/main/resources/edu.au.cpsc.launcher.style/main.css
+++ b/module5/src/main/resources/edu.au.cpsc.launcher.style/main.css
@@ -13,18 +13,5 @@ Rules for this program:
 2. use at least 4 image assets (download from favorite site)
  */
 
-#airport-button {
+@import "fonts.css";
 
-}
-
-#seat-reservation-button {
-
-}
-
-#flight-schedule-button {
-
-}
-
-#aircraft-button {
-
-}
