--- a/module5/src/main/resources/edu.au.cpsc.launcher.style/main.css
+++ b/module5/src/main/resources/edu.au.cpsc.launcher.style/main.css
@@ -13,5 +13,5 @@ Rules for this program:
 2. use at least 4 image assets (download from favorite site)
  */
 
-@import "fonts.css";
+@import "fonts-images.css";
 
